--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -70,46 +70,16 @@
 .dealerLeftSide >h3{font-family: var(--medium);font-size: 20px;line-height: 26px;color:#656565;margin: 0 0 10px;}
 .dealerRightSide>p{font-family: var(--regular);font-size: 20px;line-height: 25px;color:#2a2a2a;margin: 0 0 30px;}
 .dealerRightSide>p>i{display: block;font-style: normal;}
+.delarContainer{display: flex;gap:80px}
 .delarContainer>div>h3{font-family: var(--medium);font-size: 18px;line-height: 25px;color:#333333;margin:0 0 8px}
 .delarContainer>div>ul>li{font-family: var(--regular);font-size: 16px;line-height: 28px;color:#2a2a2a;text-decoration: underline #666666;text-underline-offset: 8px;padding-bottom: 8px;}
 .dealerRightSide>p.outside{font-family: var(--regular);font-size: 16px;line-height: 28px;padding: 20px 0 0;color:#2a2a2a;}
-.delarContainer{display: flex;gap:80px}
+.dealerRightSide>p.outside>a{transition: all 0.5s ease;}
+.dealerRightSide>p.outside>a:hover{color: var(--sred);}
 .dealerShipFormSec .contactEnqFormWrap{background-color: #f5f5f5;}
 .dealerShipFormSec .frmCaptcha{background-color: #fff;}
-.file-upload-group {
-            display: flex;
-            align-items: center;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            background-color: #fff;
-            padding: 0;
-            height: 42px; 
-            overflow: hidden;
-        }
-
-        .file-label-text {
-            display: block;
-            margin-bottom: 5px;
-            font-size: 14px;
-            color: #686868;
-        }
-
-        .browse-button {
-            background-color: #e0e0e0;
-            border: none;
-            padding: 10px 15px;
-            cursor: pointer;
-            border-radius: 4px;
-            margin: 0 10px 0 4px;;
-            white-space: nowrap;
-            font-size: 13px;line-height: 14px;color:#545454;
-        }
-
-        .file-selected-text {
-            color: #777;
-            font-size: 14px;
-        }
-
-        .hidden-file-input {
-            display: none;
-        }
+.file-upload-group {display: flex;align-items: center;border: 1px solid #ccc;border-radius: 10px;background-color: #fff;padding: 0;height: 42px; overflow: hidden;}   
+.file-label-text {display: block;margin-bottom: 5px;font-size: 14px;color: #686868;}
+.browse-button {background-color: #e0e0e0;border: none;padding: 10px 15px;cursor: pointer;border-radius: 10px;margin: 0 10px 0 3px;;white-space: nowrap;font-size: 13px;line-height: 14px;color:#545454;}
+.file-selected-text {color: #777;font-size: 14px;}
+.hidden-file-input {display: none;}
