--- a/public/styles/testbreaks.css
+++ b/public/styles/testbreaks.css
@@ -18,6 +18,9 @@
 .contactMapHead > h3{font-size: 24px;line-height: 34px;}
 .contactEnqSec > h4{font-size: 24px;line-height: 26px;}
 
+/*dealership*/
+.dealerShipCntSec{gap:150px;}
+.delarContainer{gap:160px;}
 }
 
 @media screen and (min-width: 1440px) {
@@ -67,6 +70,11 @@
 .indIconSet > div{padding: 15px;min-width: 200px;}
 .indIconSet > div > h6{font-size: 15px;line-height: 20px;}
 .indIconSet > div > p{font-size: 14px;line-height: 24px;}
+
+/*dealership*/
+.dealerShipCntSec{flex-direction: column;gap:30px;padding: 50px 0 125px;}
+.dealerShipFormSec .contactEnqFormWrap{padding: 50px 0;}
+.delarContainer{gap:50px}
   
 }
 
@@ -85,7 +93,9 @@
 .contactEnqSec > h4{font-size: 18px;line-height: 24px;margin: 0 0 10px;}
 .contactEnqSec > p{font-size: 15px;line-height: 24px;margin: 0 0 10px;}
 
-
+/*dealership*/
+.dealerShipCntSec{gap:25px}
+.delarContainer{flex-direction: column;gap:25px}
 }
 
 @media only screen and (max-width: 479px) {
@@ -112,6 +122,14 @@
 .formGroup {flex-direction: column;gap:0;}
 .formGroup.nogrow{flex-direction: row;gap:10px;}
 
+/*dealership*/
+.dealerShipCntSec{padding:30px 0 125px;gap:15px;}
+.dealerLeftSide > h2{font-size: 20px;line-height: 25px;margin:0 0 5px}
+.dealerLeftSide > h3{font-size: 18px;line-height: 22px;margin:0 0 5px}
+.dealerRightSide > p{font-size: 16px;line-height: 22px;margin:0 0 15px}
+.delarContainer > div > ul > li{font-size: 15px;line-height: 22px;}
+.dealerRightSide > p.outside{font-size: 15px;line-height: 22px;margin: 0 0 25px;}
+.dealerShipFormSec .contactEnqFormWrap{padding: 30px 0;}
 }
 
 
