--- a/public/styles/staticbreaks.css
+++ b/public/styles/staticbreaks.css
@@ -28,6 +28,9 @@
     .eLearningVideoWrap{padding: 150px 0 250px;}
     .eLearningBrochuresWrap{padding: 150px 0 250px;}
     .eLearningBrochuresHead{margin-bottom: 40px;}
+
+    /*design*/
+    .transformerEarthingBody{padding: 140px 0 0;}
 }
 
 
