--- a/app/globals.css
+++ b/app/globals.css
@@ -52,6 +52,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 h1, h2, h3, h4, h5, h6 { font-weight: normal; margin: 0; }
 p { margin: 0; }
 p>em { display: block; }
+input,input:focus,input:active,input:focus-visible { outline: none !important; box-shadow: none !important;}
 
 .staticWrapper{margin-bottom: 100px;}
 .staticWrapper.paddngTop {padding: 80px 0 0;}
