--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,7 @@ h1, h2, h3, h4, h5, h6 { font-weight: normal; margin: 0; }
 p { margin: 0; }
 p>em { display: block; }
 input,input:focus,input:active,input:focus-visible { outline: none !important; box-shadow: none !important;}
+select:focus, select:active, select:focus-visible { outline: none; box-shadow: none; }
 
 .staticWrapper{margin-bottom: 100px;}
 .staticWrapper.paddngTop {padding: 80px 0 0;}
