--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -168,8 +168,10 @@ h2.designCommonHead{font-size: 30px;line-height: 1em;font-family: var(--medium);
 .transformerEarthingFormSec input{background: #fff;border-radius: 10px;height: 55px;width: 100%;padding: 16px 20px;border: 1px solid #C8C8C8;font-size: 16px;}
 .transformerEarthingDsgnCalc { padding: 100px 0 220px; background: #F5F5F5; position: relative; border-radius: var(--border-home); z-index: 1;margin-top: -100px;margin-bottom: -180px }
 .transformerEarthingDsgnCalc form{display: grid;grid-template-columns: repeat(2, 1fr); gap: 40px 120px;margin: 40px 0 0;}
+.DesignCalcFormSec > div{display: flex;gap: 20px;align-items: center;justify-content: center;position: relative;}
 .DesignCalcFormSec label{display: block;font-size: 18px;line-height: 1em;margin-bottom: 10px;}
 .DesignCalcFormSec input{background: #fff;border-radius: 10px;height: 55px;width: 100%;padding: 16px 20px;border: 1px solid #C8C8C8;font-size: 16px;}
-.DesignCalcFormSec > div{display: flex;gap: 20px;align-items: center;justify-content: center;}
+.DesignCalcFormSec select { background: #fff; border-radius: 10px; height: 55px; width: 100%; padding: 0 20px; border: 1px solid #C8C8C8; font-size: 16px; appearance: none; -webkit-appearance: none;-moz-appearance: none;}
+.DesignCalcFormSec select { background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='20' viewBox='0 0 20 20' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M5 7l5 5 5-5'/></svg>"); background-repeat: no-repeat; background-position: right 15px center; background-size: 14px; }
 .DesignCalcFormSec.fullRow { grid-column: 1 / 3;  } 
 .DesignCalcFormSec.fullRow button { width: 100%; height: 55px;color: #fff; border-radius: 10px; font-size: 18px;border: 1px solid #707070;background: #444444; }
