--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -65,7 +65,7 @@
 .formBtn{display: inline-block;background-color: #444444;color:#fff;border-radius: 10px;padding: 15px 45px;margin-top:25px;font-size: 14px;line-height: 15px;}
 
 /*dealership*/
-.dealerShipCntSec{display: flex;gap:90px;padding:  80px 0 230px;}
+.dealerShipCntSec{display: flex;gap:90px;padding:  80px 0 200px;}
 .dealerLeftSide >h2{font-family: var(--medium);font-size: 26px;line-height: 28px;color:#333333;margin: 0 0 10px;}
 .dealerLeftSide >h3{font-family: var(--medium);font-size: 20px;line-height: 26px;color:#656565;margin: 0 0 10px;}
 .dealerRightSide>p{font-family: var(--regular);font-size: 20px;line-height: 25px;color:#2a2a2a;margin: 0 0 30px;}
@@ -76,7 +76,7 @@
 .dealerRightSide>p.outside{font-family: var(--regular);font-size: 16px;line-height: 28px;padding: 20px 0 0;color:#2a2a2a;}
 .dealerRightSide>p.outside>a{transition: all 0.5s ease;}
 .dealerRightSide>p.outside>a:hover{color: var(--sred);}
-.dealerShipFormSec .contactEnqFormWrap{background-color: #f5f5f5;}
+.dealerShipFormSec .contactEnqFormWrap{background-color: #f5f5f5;padding: 100px 0 170px;position: relative;margin-bottom: -180px;z-index: -1 !important;}
 .dealerShipFormSec .frmCaptcha{background-color: #fff;}
 .file-upload-group {display: flex;align-items: center;border: 1px solid #ccc;border-radius: 10px;background-color: #fff;padding: 0;height: 42px; overflow: hidden;}   
 .file-label-text {display: block;margin-bottom: 5px;font-size: 14px;color: #686868;}
