--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -83,3 +83,6 @@
 .browse-button {background-color: #e0e0e0;border: none;padding: 10px 15px;cursor: pointer;border-radius: 10px;margin: 0 10px 0 3px;;white-space: nowrap;font-size: 13px;line-height: 14px;color:#545454;}
 .file-selected-text {color: #777;font-size: 14px;}
 .hidden-file-input {display: none;}
+
+/*certifications*/
+.certificationSec{}
