--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -76,7 +76,8 @@
 .dealerRightSide>p.outside{font-family: var(--regular);font-size: 16px;line-height: 28px;padding: 20px 0 0;color:#2a2a2a;}
 .dealerRightSide>p.outside>a{transition: all 0.5s ease;}
 .dealerRightSide>p.outside>a:hover{color: var(--sred);}
-.dealerShipFormSec .contactEnqFormWrap{background-color: #f5f5f5;padding: 100px 0 170px;position: relative;margin-bottom: -180px;z-index: -1 !important;}
+.dealerShipFormSec .contactEnqFormWrap{background-color: #f5f5f5;padding: 100px 0 170px;position: relative;margin-bottom: -180px;}
+.dealerShipFormSec .contactEnqSec{position: relative;z-index: 2;}
 .dealerShipFormSec .frmCaptcha{background-color: #fff;}
 .file-upload-group {display: flex;align-items: center;border: 1px solid #ccc;border-radius: 10px;background-color: #fff;padding: 0;height: 42px; overflow: hidden;}   
 .file-label-text {display: block;margin-bottom: 5px;font-size: 14px;color: #686868;}
