--- a/public/styles/mainbreaks.css
+++ b/public/styles/mainbreaks.css
@@ -136,15 +136,19 @@
 
 
     /*event*/
-    .eventsWrap { padding: 80px 0 200px; }
+    .eventsWrap { padding: 80px 0 180px; }
     .eventsBody { flex-direction: column; }
     .eventsBodyLft { min-width: 100%; }
-    .eventItem { gap: 30px; justify-content: flex-start; }
+    .eventSliderWrap{max-width: 720px;}
+    .eventItem { gap: 30px; justify-content: flex-start;align-items: center; }
     .eventsSliderNav { gap: 15px; top: 80px; right: 30px; }
     .eventsBodyLft > h2 > em { display: inline-block; }
     .eventImg { max-width: 300px; }
     .eventInfo { width: 100%; }
     .eventInfo > p { max-width: 100%; font-size: 18px; }
+    .eventInfo > h3{font-size: 24px;margin-bottom: 15px;}
+    .eventInfo > p{font-size: 16px;padding-top: 10px;}
+    .eventInfo > span{font-size: 18px;margin-bottom: 15px;}
 
 }
 
@@ -238,20 +242,36 @@
     .insightsUpdateGridItem span { margin: 25px 0 10px; }
     .insightsUpdateGridItem p { color: #111; margin: 15px 0 20px; font-size: 16px; }
 
-   
+    /*event*/
+    .eventsWrap{padding: 60px 0 220px;}
+    .eventsBodyLft{justify-content: center;}
+    .eventSliderWrap{max-width: 100%;}
+    .eventItem { flex-direction: column; }
+    .eventInfo > h3,.eventInfo > p{text-align: center;}
+    .eventInfo > span{justify-content: center;}
+    .eventsSliderNav{top: unset;bottom: 160px;left: 50%;gap: 10px;transform: translateX(-50%); right: unset;}
+    .eventNavBtn{height: 35px;width: 35px;}
 }
 
 @media only screen and (max-width: 479px) {
+
+    /*common*/
+    .homeCmnHead { font-size: 24px; }
 
     /*banner*/
     .bannerContentLft > h1 { padding-bottom: 15px; font-size: 38px; }
     .bannerGrid { grid-template-columns: repeat(1, 1fr); gap: 12px; }
 
-
     /*at glance*/
     .atGlanceTopContRght > span { font-size: 250px; }
     .atGlanceTopContRght > em { max-width: 160px; bottom: 35px; }
     .atGlanceGrid { grid-template-columns: repeat(1, 1fr); gap: 25px; }
+
+    /*event*/
+    .eventsBody{gap: 30px;}
+    .eventInfo > h3{font-size: 20px;}
+    .eventInfo > p{padding-top: 0;}
+    .eventItem{gap: 25px;}
 
 }
 
