--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -175,3 +175,12 @@ h2.designCommonHead{font-size: 30px;line-height: 1em;font-family: var(--medium);
 .DesignCalcFormSec select { background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='20' viewBox='0 0 20 20' width='20' xmlns='http://www.w3.org/2000/svg'><path d='M5 7l5 5 5-5'/></svg>"); background-repeat: no-repeat; background-position: right 15px center; background-size: 14px; }
 .DesignCalcFormSec.fullRow { grid-column: 1 / 3;  } 
 .DesignCalcFormSec.fullRow button { width: 100%; height: 55px;color: #fff; border-radius: 10px; font-size: 18px;border: 1px solid #707070;background: #444444; }
+
+
+/*insights-and-updates-details*/
+.insightsUpdatesDetailsWrap{padding: 100px 0;}
+.recentPostsWrap{display: flex;flex-direction: column;gap: 30px;}
+.insightsUpdatesDetailsBody{display: flex;}
+.insightsUpdatesDetailsLftCont{border-right: 1px solid #D7D9DD;padding-right: 30px;}
+.insightsUpdatesDetailsRghtCont{padding-left: 30px;}
+.recentPostsitem{display: flex;gap: 15px;}
