--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -181,6 +181,23 @@ h2.designCommonHead{font-size: 30px;line-height: 1em;font-family: var(--medium);
 .insightsUpdatesDetailsWrap{padding: 100px 0;}
 .recentPostsWrap{display: flex;flex-direction: column;gap: 30px;}
 .insightsUpdatesDetailsBody{display: flex;}
-.insightsUpdatesDetailsLftCont{border-right: 1px solid #D7D9DD;padding-right: 30px;}
-.insightsUpdatesDetailsRghtCont{padding-left: 30px;}
+.insightsUpdatesDetailsLftCont{border-right: 1px solid #D7D9DD;padding-right: 40px;flex: 80%;}
+.insightsUpdatesDetailsRghtCont{padding-left: 40px;}
 .recentPostsitem{display: flex;gap: 15px;}
+.recentPostImg > img{min-width: 100px;display: block;}
+.blogPostContent img{border-radius: 20px;width: 100%;height: auto;margin: 30px 0;}
+.blogPostContent ul{}
+.blogPostContent h2{font-size: 26px;line-height: 1.4em;margin: 20px 0;font-family: var(--medium);}
+.blogPostContent p{font-size: 18px;line-height: 1.5em;}
+.blogPostContent ul > li{font-size: 18px;line-height: 1.5em;position: relative;padding: 0 0 8px 25px;}
+.blogPostContent ul > li::before{content: "";position: absolute;top: 7px;left: 0;width: 8px;height: 8px;border-radius: 50%;border: 1px solid #E50019;}
+
+.blogPostShareSec { margin: 60px 0 0;display: flex;gap: 10px;justify-content: center;padding: 20px;border: 1px solid #ddd;border-width: 1px 0 1px ; } 
+.blogPostShareSec .shareButton { display: flex; align-items: center;justify-content: center;padding: 10px 15px;font-size: 16px; text-decoration: none;border-radius: 8px;color: white;min-width: 100px;transition: opacity 0.2s;cursor: pointer;gap: 8px; } 
+.blogPostShareSec .shareButton .icon {  margin-right: 5px; font-style: normal;} 
+.blogPostShareSec .facebook { background-color: #3b5998;}
+.blogPostShareSec .twitter { background-color: #000000; color: white; } 
+.blogPostShareSec .email { background-color: #7f7f7f; color: white; }  
+.blogPostShareSec .whatsapp { background: linear-gradient(to right, #25D366, #34AF23); color: white; } 
+.blogPostShareSec .generic-share { background: linear-gradient(to right, #8BC34A, #C6FF00); color: white; } 
+.blogPostShareSec .share-button:hover { opacity: 0.9; }
