--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -183,12 +183,17 @@ h2.designCommonHead{font-size: 30px;line-height: 1em;font-family: var(--medium);
 .insightsUpdatesDetailsBody{display: flex;}
 .insightsUpdatesDetailsLftCont{border-right: 1px solid #D7D9DD;padding-right: 40px;flex: 80%;}
 .insightsUpdatesDetailsRghtCont{padding-left: 40px;}
-.recentPostsitem{display: flex;gap: 15px;}
-.recentPostImg > img{min-width: 100px;display: block;}
+.recentPostsitem{display: flex;gap: 20px;border-bottom: 1px solid #D7D9DD;padding-bottom: 30px;align-items: center;cursor: pointer;}
+.recentPostsitem>p{font-size: 18px;line-height: 1.4em;font-family: var(--medium);transition: all 0.3s ease;}
+.recentPostImg > img{min-width: 120px;display: block;}
+.recentPostsitem:hover p{color:#666666;}
+
+.blogPostContentHead > h3{font-size: 18px;line-height: 1em;color: #888888;}
+.blogPostContentHead > h1{font-size: 36px;line-height: 1.2em;font-family: var(--medium);color: #333333;margin: 20px 0 10px;max-width: 800px;}
+.blogPostContentHead > span{color:#666666;font-size: 16px;line-height: 1em;}
 .blogPostContent img{border-radius: 20px;width: 100%;height: auto;margin: 30px 0;}
-.blogPostContent ul{}
 .blogPostContent h2{font-size: 26px;line-height: 1.4em;margin: 20px 0;font-family: var(--medium);}
-.blogPostContent p{font-size: 18px;line-height: 1.5em;}
+.blogPostContent p{font-size: 18px;line-height: 1.5em;margin-bottom: 5px;}
 .blogPostContent ul > li{font-size: 18px;line-height: 1.5em;position: relative;padding: 0 0 8px 25px;}
 .blogPostContent ul > li::before{content: "";position: absolute;top: 7px;left: 0;width: 8px;height: 8px;border-radius: 50%;border: 1px solid #E50019;}
 
