--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -179,25 +179,29 @@ h2.designCommonHead{font-size: 30px;line-height: 1em;font-family: var(--medium);
 
 /*insights-and-updates-details*/
 .insightsUpdatesDetailsWrap{padding: 100px 0;}
-.recentPostsWrap{display: flex;flex-direction: column;gap: 30px;}
 .insightsUpdatesDetailsBody{display: flex;}
 .insightsUpdatesDetailsLftCont{border-right: 1px solid #D7D9DD;padding-right: 40px;flex: 80%;}
 .insightsUpdatesDetailsRghtCont{padding-left: 40px;}
+.recentPostsWrap{display: flex;flex-direction: column;gap: 30px;position: sticky;top: 150px;}
 .recentPostsitem{display: flex;gap: 20px;border-bottom: 1px solid #D7D9DD;padding-bottom: 30px;align-items: center;cursor: pointer;}
 .recentPostsitem>p{font-size: 18px;line-height: 1.4em;font-family: var(--medium);transition: all 0.3s ease;}
 .recentPostImg > img{min-width: 120px;display: block;}
 .recentPostsitem:hover p{color:#666666;}
-
 .blogPostContentHead > h3{font-size: 18px;line-height: 1em;color: #888888;}
 .blogPostContentHead > h1{font-size: 36px;line-height: 1.2em;font-family: var(--medium);color: #333333;margin: 20px 0 10px;max-width: 800px;}
 .blogPostContentHead > span{color:#666666;font-size: 16px;line-height: 1em;}
 .blogPostContent img{border-radius: 20px;width: 100%;height: auto;margin: 30px 0;}
 .blogPostContent h2{font-size: 26px;line-height: 1.4em;margin: 20px 0;font-family: var(--medium);}
 .blogPostContent p{font-size: 18px;line-height: 1.5em;margin-bottom: 5px;}
+.blogPostContent p > b{margin: 10px 0;font-family: var(--medium);display: block;}
 .blogPostContent ul > li{font-size: 18px;line-height: 1.5em;position: relative;padding: 0 0 8px 25px;}
 .blogPostContent ul > li::before{content: "";position: absolute;top: 7px;left: 0;width: 8px;height: 8px;border-radius: 50%;border: 1px solid #E50019;}
-
-.blogPostShareSec { margin: 60px 0 0;display: flex;gap: 10px;justify-content: center;padding: 20px;border: 1px solid #ddd;border-width: 1px 0 1px ; } 
+.blogVideowWap { position: relative; width: 100%;  margin: 0 auto; overflow: hidden; border-radius: 10px;margin: 30px 0;display: block; }
+.blogVideowWap img { display: block; width: 100%; height: auto; border-radius: 20px;margin: 0; } 
+.blogVideoOverlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.2); border-radius: 20px; } 
+.blogVideoPlayBtn { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 65px; height: 65px; display: flex; align-items: center; justify-content: center; transition: all 0.5s ease; }
+.blogVideowWap:hover .blogVideoPlayBtn { transform: translate(-50%, -50%) scale(1.3);}
+.blogPostShareSec { margin: 80px 0 0;display: flex;gap: 10px;justify-content: center;padding: 20px;border: 1px solid #ddd;border-width: 1px 0 1px ; } 
 .blogPostShareSec .shareButton { display: flex; align-items: center;justify-content: center;padding: 10px 15px;font-size: 16px; text-decoration: none;border-radius: 8px;color: white;min-width: 100px;transition: opacity 0.2s;cursor: pointer;gap: 8px; } 
 .blogPostShareSec .shareButton .icon {  margin-right: 5px; font-style: normal;} 
 .blogPostShareSec .facebook { background-color: #3b5998;}
