--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -119,3 +119,30 @@
 .qualityAssureDownHead{text-align: center;}
 .qualityAssureDownHead>h3{font-family: var(--medium);font-size: 20px;line-height: 24px;color:#fff;margin: 15px 0 0;}
 .qualityAssureDownHead>h3>i{display: block;font-style: normal;}
+
+
+/*product details*/
+.productDetailsWrapper{padding: 80px 0 0;background-color: #f6f6f6;}
+.productPageContainer {display: flex; max-width: 1200px;margin: 0 auto;padding: 20px;border-radius: 8px;}
+
+.productGallery {flex: 0 0 40%; padding-right: 40px;}
+.productGallery>div{max-width: 450px;}
+.productGallery .swiper-slide{display: flex;justify-content: center;}
+.productGallery .swiper-thumbs{padding: 20px 0;}
+.productGallery .swiper-slide-thumb-active{border: 1px solid var(--sred);border-radius: 4px;}
+.productGallery .swiper-slide-fully-visible{opacity: 0.8;}
+.productDetails {flex: 1; padding-left: 20px;}
+.productHeader h1 {font-family: var(--bold);font-size: 25px;line-height: 32px;color: #333;margin: 0 0 10px;}
+.productHeader .category { font-family: var(--medium);font-size: 16px;line-height: 25px;color: #666;margin:0 0 15px;}
+
+.productDescription p {font-size: 14px;line-height: 22px;color: #444;}
+.productNoteBox{margin: 20px 0;padding: 0;font-size: 14px;line-height: 22px;color: #666;}
+.productNoteBox b{color:#444;}
+.actionButtons {margin-bottom: 30px;}
+.enquiryButton {background-color: #555; color: white;padding: 6px 20px;border: none;border-radius: 4px;cursor: pointer;font-size: 15px;line-height: 24px;display: flex;align-items: center;gap: 8px;transition: background-color 0.3s;}
+.enquiryButton:hover {background-color: #333;}
+.optionGrid {display: flex;flex-wrap: wrap; gap: 10px;}
+.optionTag {padding: 8px 15px;border: 1px solid #ccc;border-radius: 4px;cursor: pointer;font-size: 0.9em;color: #555;transition: background-color 0.2s, border-color 0.2s;background-color: #fff;}
+.optionTag:hover {border-color: #333;}
+.optionTag.selected {background-color: #ddd; border-color: #333;font-weight: bold;}
+.productOptions{padding: 20px 0;border-top:1px solid #c2c2c2;border-bottom:1px solid #c2c2c2;}
