--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -122,8 +122,8 @@
 
 
 /*product details*/
-.productDetailsWrapper{padding: 80px 0 0;background-color: #f6f6f6;}
-.productPageContainer {display: flex; max-width: 1200px;margin: 0 auto;padding: 20px;border-radius: 8px;}
+.productDetailsWrapper{background-color: #f6f6f6;}
+.productDetailsMainWrap {display: flex;padding: 80px 0 50px;}
 
 .productGallery {flex: 0 0 40%; padding-right: 40px;}
 .productGallery>div{max-width: 450px;}
@@ -139,10 +139,70 @@
 .productNoteBox{margin: 20px 0;padding: 0;font-size: 14px;line-height: 22px;color: #666;}
 .productNoteBox b{color:#444;}
 .actionButtons {margin-bottom: 30px;}
-.enquiryButton {background-color: #555; color: white;padding: 6px 20px;border: none;border-radius: 4px;cursor: pointer;font-size: 15px;line-height: 24px;display: flex;align-items: center;gap: 8px;transition: background-color 0.3s;}
+.enquiryButton {background-color: #555; color: white;padding: 10px 15px;border: none;border-radius: 6px;cursor: pointer;font-family: var(--medium);font-size: 14px;line-height: 18px;display: flex;align-items: center;gap: 4px;}
 .enquiryButton:hover {background-color: #333;}
+.enquiryButton>span{display: inline-block;width: 20px;height:20px;position: relative;}
+.enquiryButton>span:after{content:'';display: inline-block;width: 15px;height: 15px;position: absolute;top:2px;left: 0;background-image: url(../images/product-details/whatsapp.svg);background-repeat: no-repeat;background-size: cover;}
 .optionGrid {display: flex;flex-wrap: wrap; gap: 10px;}
 .optionTag {padding: 8px 15px;border: 1px solid #ccc;border-radius: 4px;cursor: pointer;font-size: 0.9em;color: #555;transition: background-color 0.2s, border-color 0.2s;background-color: #fff;}
 .optionTag:hover {border-color: #333;}
 .optionTag.selected {background-color: #ddd; border-color: #333;font-weight: bold;}
 .productOptions{padding: 20px 0;border-top:1px solid #c2c2c2;border-bottom:1px solid #c2c2c2;}
+.prdtRoundWrap{background-color:#ebebeb;border-radius: var(--border-home);padding: 50px 0 150px;position: relative;margin-bottom: -110px;}
+.prdtRoundWrap.gray{background-color: #dfdfdf;position: relative;margin-bottom: -200px;}
+
+
+.productInfoContainer {}
+.SpecTabs {display: flex;gap:15px}
+.SpecTabs >li{display: inline-block;padding: 10px 20px;background-color: #a9a9a9;color: #333;border-radius: 4px;font-family: var(--medium);font-size: 15px;line-height: 18px;position: relative;cursor: pointer;transition: all 0.3s ease;}
+.SpecTabs >li:hover{background-color:#444 ;color:#fff;}
+.SpecTabs >li.active{background-color:#444 ;color:#fff;}
+.SpecTabs >li.active::before {
+    content: '';
+    position: absolute;
+    bottom: -8px;
+    left: 50%;
+    margin-left: -1px;
+    width: 0;
+	height: 0;
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+	border-top: 8px solid #555;
+}
+
+.PrdtTabContent {
+    display: none;
+    padding: 15px 0;
+    
+}
+
+.PrdtTabContent.active {
+    display: block;
+}
+
+.PrdtTabContent ul {
+    list-style: none; 
+    padding: 0;
+}
+
+.PrdtTabContent li {
+    padding: 5px 0 5px 15px;
+    position: relative;
+    font-size: 14px;
+    color: #333;
+}
+
+.PrdtTabContent li::before {
+    content: '';
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    border: 1px solid #a00;
+    position: absolute;
+    top: 10px;
+    left: 0;
+}
+.relatedProductsWrap>h3{font-family: var(--medium);font-size: 25px;line-height: 32px;}
+.relatedProductsSlider{padding-top:30px ;display: flex;gap:20px}
+.relatedProductsSlider .prdtBox{max-width: 300px;}
