--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -259,3 +259,12 @@ h2.designCommonHead{font-size: 30px;line-height: 1em;font-family: var(--medium);
 .aboutUsInfraStructureBtmCont > h3{font-size: 40px;line-height: 1em;margin-bottom: 10px;font-family: var(--medium);color: #333333;}
 .infrastructureHighlightsSec{display: flex;gap: 80px;}
 .infrastructureHighlightsSec > ul >li{border-bottom: 1px solid #111111;padding: 12px 0;color: #111111;font-size: 18px;line-height: 1.5em;}
+.aboutUsMissionWrap{padding: 100px 0 200px; background: #333333; position: relative;border-radius: var(--border-home); margin-top: -100px; z-index: 1;color: #ffff;}
+.aboutUsMissionHead > h2{font-size: 90px;line-height: 1.1em;}
+.aboutUsMissionHead > h2 > em{display: block;}
+.aboutUsMissionGrid{display:flex;gap: 60px;margin-top: 80px;justify-content: space-between;}
+.aboutUsMissionGridItem {flex: 1;}
+.aboutUsMissionGridItem > span{display: block;font-size: 18px;line-height: 1em;border-bottom: 1px solid #707070;padding-bottom: 15px;margin-bottom: 30px;color: #BCBCBC;}
+.aboutUsMissionGridItem > h3{font-size: 48px;line-height: 1em;font-family: var(--medium);margin: 30px 0;}
+.aboutUsMissionGridItem > p{font-size: 18px;line-height: 1.5em;max-width: 430px;}
+.aboutUsMissionGridItem > ul > li{font-size: 18px;line-height: 1.5em;}
