--- a/public/styles/staticstyle.css
+++ b/public/styles/staticstyle.css
@@ -287,33 +287,11 @@ h2.designCommonHead{font-size: 30px;line-height: 1em;font-family: var(--medium);
 .timelineLine{width:100%;height:1px;background:#828282;position:absolute;bottom:20px;left:0;z-index:-1;}
 .aboutUsMilestonesContent{display: flex;justify-content: center;align-items: center;}
 .aboutUsMilestonesContentLft {padding-right: 60px;}
-.aboutUsMilestonesContentLft > span{font-size: 150px;line-height: 1em;font-family: var(--light);}
+.aboutUsMilestonesContentLft > span{font-size: 150px;line-height: 1em;font-family: var(--light);width: 330px;display: block;}
 .aboutUsMilestonesContentRght{padding-left: 60px;max-width: 400px;border-left: 1px solid #828282;}
 .aboutUsMilestonesContentRght > h3{font-size:30px;line-height: 1.5em;font-family: var(--medium);margin-bottom:10px;}
 .aboutUsMilestonesContentRght > p{font-size:18px;max-width:600px;margin:0 auto;line-height:1.6em;}
 
-.year {
-    display: inline-flex;
-    font-size: 40px;
-    font-weight: 700;
-  }
-  
-  .year span {
-    display: inline-block;
-    animation: rotateDigit 0.6s ease-out forwards;
-    transform-origin: center bottom;
-  }
-  
-  @keyframes rotateDigit {
-    0% {
-      transform: rotateX(90deg);
-      opacity: 0;
-    }
-    100% {
-      transform: rotateX(0deg);
-      opacity: 1;
-    }
-  }
   
 
 
